# opensleep

./: .gitignore  README.md
android/: settings.gradle.kts  test.kt
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/sleep_apk_extract/decompiled/resources/: AndroidManifest.xml  MANIFEST.MF  aicore.properties  builddef.lst  kotlin-tooling-metadata.json  play-services-ads-api.properties  play-services-ads.properties  play-services-auth.properties  play-services-base.properties  play-services-basement.properties  play-services-fitness.properties  play-services-home.properties  play-services-nearby.properties  play-services-tasks.properties  play-services-wearable.properties  version2.txt
android/sleep_apk_extract/decompiled/resources/assets/: addons.html  addons2.html  app_functions.xml  app_functions_v2.xml  (+9 more)
android/sleep_apk_extract/unzipped/: classes2.dex
ios/opensleep/: Info.plist  LITERT_LM_DEPENDENCY.md
ios/opensleep/LocalPackages/LiteRT-LM/: .bazelrc  Package.swift  README.md  WORKSPACE  requirements.txt  version.bzl
ios/opensleep/LocalPackages/LiteRT-LM/python/litert_lm_builder/: BUILD  README.md  __init__.py  bundle_pypi_package.sh  litertlm_builder.py  litertlm_builder_cli.py  litertlm_builder_cli_test.py  litertlm_builder_test.py  litertlm_core.py  litertlm_core_test.py  litertlm_peek.py  litertlm_peek_test.py  pyproject.toml
ios/opensleep/opensleep/: ContentView.swift  Item.swift  Localizable.xcstrings  opensleep.entitlements  opensleepApp.swift
ios/opensleep/opensleep.xcodeproj/: project.pbxproj
ios/opensleep/opensleep/Models/: Models.swift
ios/opensleep/opensleep/Services/: HealthKitManager.swift  LiteRtManager.swift  ModelDownloadManager.swift  SleepStageAnalyzer.swift  SleepTrackerService.swift  UrbandroidFFT.swift
ios/opensleep/opensleep/Theme/: AppTheme.swift
(+29599 files in other folders)
